# Uni-Menu-Automation

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: engine.py  main.py
